<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Cadastro">


    <TextView
        android:id="@+id/titulo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/cad_titulo"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_nome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:inputType="text"
        android:textSize="@dimen/tamanhoTitulo"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_cadastro"
        />

    <EditText
        android:id="@+id/edit_login"
        style="@style/Edit_Text"
        android:hint="@string/login"
        android:inputType="number"
        android:drawableRight="@drawable/ic_email"
        android:textSize="@dimen/tamanhoTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_nome"
        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:textSize="@dimen/tamanhoTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style= "@style/Button"
        android:text="@string/cadastrar"
        android:textSize="@dimen/tamanhoTitulo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        android:backgroundTint="@color/blue_dark"
        />




</androidx.constraintlayout.widget.ConstraintLayout>