<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".Listagem">


    <TextView
        android:id="@+id/lista"
        style="@style/Container_High"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanhoTopico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="450dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add"
        style= "@style/SmallButton"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanhoText"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/add"
        android:layout_marginTop="10dp"

         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_remove"
        style="@style/SmallButton"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/remover"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanhoText"
        android:layout_marginBottom="10dp"

        /></LinearLayout>


</LinearLayout>







