<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/perfil"
        style="@style/Container_High"
        android:text="@string/usuario"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanhoTopico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/nome"
        style="@style/ItemPerfil"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/perfil"
        />

    <EditText
        android:id="@+id/ed_nome"
        style="@style/ContainerPerfil"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome" />

    <TextView
        android:id="@+id/matricula"
        style="@style/ItemPerfil"
        android:text="@string/matricula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_nome"
        />

    <EditText
        android:id="@+id/ed_matricula"
        style="@style/ContainerPerfil"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matricula"/>

    <TextView
        android:id="@+id/cpf"
        style="@style/ItemPerfil"
        android:text="@string/cpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_matricula"
        />

    <EditText
        android:id="@+id/ed_cpf"
        style="@style/ContainerPerfil"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cpf"/>

    <TextView
        android:id="@+id/tel"
        style="@style/ItemPerfil"
        android:text="@string/telefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_cpf"
        />

    <EditText
        android:id="@+id/ed_tel"
        style="@style/ContainerPerfil"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tel"/>

    <TextView
        android:id="@+id/endereço"
        style="@style/ItemPerfil"
        android:text="@string/endereço"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_tel"
        />

    <EditText
        android:id="@+id/ed_endereço"
        style="@style/ContainerPerfil"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endereço"/>


</androidx.constraintlayout.widget.ConstraintLayout>