<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Info">

    <TextView
        android:id="@+id/info"
        android:text="Secrearia Municipal de Educação"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanhoTopico"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginRight="@dimen/margem"
        android:layout_marginTop="@dimen/margem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/info_email"
        style="@style/Button"
        android:text="@string/info_email"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginTop="150dp"
        android:onClick="enviarEmail"
        android:gravity="left"
        android:drawableLeft="@drawable/ic_email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/info_tel"
        style="@style/Button"
        android:text="@string/tel"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem"
        android:onClick="Ligar"
        android:gravity="left"
        android:drawableLeft="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_email"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/info_ender"
        style="@style/Button"
        android:text="@string/local"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem"
        android:onClick="verLocal"
        android:gravity="left"
        android:drawableLeft="@drawable/ic_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tel"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/info_horario"
        style="@style/Button"
        android:text="@string/horario"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem"
        android:gravity="left"
        android:drawableLeft="@drawable/ic_watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_ender"
        />
</androidx.constraintlayout.widget.ConstraintLayout>